--- a/README
+++ b/README
@@ -1,3 +1,6 @@
-tangled is a asynchronous development framework for python, inspired by twisted.
-it is designed to be very light-weight, cross platform, and is meant to be used
-where the bloatedness of twisted is not desired 
+Tangled is a research-oriented, light-weight, high-performance asynchronous 
+development framework for python, inspired by twisted. Unlike twisted, however,
+tangled is aims to remove the bloatedness that is characteristic of twisted,
+such as reimplementing the whole world.
+
+Licensed under the MIT license.
